@@ -120,7 +120,7 @@ function reports_view(typ) {
         do_table_search(true);
     }
 
-    jQuery('A.editlinks').each(function(nr, link) {
+    jQuery('A.editlinks, A.updatelinks').each(function(nr, link) {
         var tmp   = link.href.replace(/tab=.*/g, 'tab='+typ);
         link.href = tmp;
     });
