@@ -2,6 +2,7 @@
 <!--
   [%+ PROCESS _common_js_bugs.tt +%]
   var url_prefix             = '[% url_prefix %]';
+  var product_prefix         = '[% product_prefix %]';
   var cookie_path            = '[% cookie_path %]';
   var theme                  = '[% theme %]';
   var has_expire_acks        = [% IF has_expire_acks %]true[% ELSE %]false[% END %];
